Added color for embed purposes.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <meta property="og:type" content="website" />
         <meta property="og:title" content="Stars" />
         <meta property="og:description" content="Stars blinking in the night sky." />
+        <meta name="theme-color" content="#140D29" />
         <title>Stars</title>
         
         <style>
