--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 
             function createNewStar(){
                 const star = document.createElement("div");
-                const y = Math.floor((Math.random() * 1024)) + "px";
-                const x = Math.floor((Math.random() * 1280)) + "px";
+                const y = Math.floor((Math.random() * window.innerHeight - 3)) + "px";
+                const x = Math.floor((Math.random() * window.innerWidth) - 3) + "px";
 
                 star.style.top = y;
                 star.style.left = x;
