--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         
         <style>
             body {
+                margin: 0;
+                overflow: hidden;
                 background-color: black;
             }
 
@@ -44,8 +46,8 @@
 
             function createNewStar(){
                 const star = document.createElement("div");
-                const y = Math.floor((Math.random() * window.innerHeight - 3)) + "px";
-                const x = Math.floor((Math.random() * window.innerWidth) - 3) + "px";
+                const y = Math.floor((Math.random() * window.innerHeight)) + "px";
+                const x = Math.floor((Math.random() * window.innerWidth)) + "px";
 
                 star.style.top = y;
                 star.style.left = x;
